fix: set GIF as background behind day name

--- a/src/views/AttendancePage/css/mobile/attendance-mobile-weekly-overview.css
+++ b/src/views/AttendancePage/css/mobile/attendance-mobile-weekly-overview.css
@@ -50,6 +50,7 @@
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
+	z-index: -1;
 }
 
 .attendance-mobile-weekly-overview-circle-mobile {
